--- a/shared/decision/知性.md
+++ b/shared/decision/知性.md
@@ -43,3 +43,7 @@ learning, thinking, training あたりは知性の関連だと思う。
 同じものを違うように見る、違うものを同じように見るのは知性が低い。
 
 頭の悪い人がひろゆきの知識の深さとかを理解しないまま、ひろゆきのようなおちゃらけた振る舞いだけが同じ浅い人を賢いと思っちゃうの、完全にひろゆきの罪なんだよな。
+
+「日本が感染数トップ」みたいな煽りが書かれていても、「じゃあ何人なの？」と考えるのが知性。
+
+「藤井聡太が100敗する前に500勝する！？」みたいな記事を見て、全部で600戦なのを考えたり5/6勝ってるのを考えたりするのが数学的な思考。語られていない部分を考える。
