--- a/shared/execution/programming/プログラム.md
+++ b/shared/execution/programming/プログラム.md
@@ -68,3 +68,5 @@ ProgramはProjectよりも前にある。
 プログラムは実行可能な計画のこと。コンピュータ用語ではない。開会式とかセレモニーのスケジュールなんかもプログラム。
 
 コンピュータプログラムはコンピュータが実行するためにコンピュータが読み取れる言葉で書く。
+
+プログラムの最低条件は、実行可能であることと、計画であること。
