--- a/shared/human/being/well/幸福.md
+++ b/shared/human/being/well/幸福.md
@@ -257,3 +257,5 @@ https://www.sustainability-hub.jp/column/about-personal-relationships/
 個人で年俸1000万円を超えるような高所得帯になると給料が上がっても幸福度は増えないが、それまでは給料を上げると幸福度はぐんぐん上がる。
 
 人それぞれの幸福がある。
+
+幸福は今すぐ手に入る。何かを手に入れたから幸福になれるわけではない。ただ、心の底から「幸福だ」と感じられる環境づくりに努めることで、より楽に手に入る。
