--- a/shared/music/vocal/training/tips/曲を覚える.md
+++ b/shared/music/vocal/training/tips/曲を覚える.md
@@ -100,3 +100,9 @@
 最後に、子音も乗せてレガートにする。子音を乗せると口を閉じたりするので、基本的にレガートは切れるが、できるだけ途切れたように聞こえないように練習する。
 
 曲を覚える時はまずリズムを知らないといけない。テンポとアクセント、それが歌詞とどう対応するか。曲によっては拍子やテンポが変わることもある。
+
+歌詞は基本的に暗記する。
+
+歌詞を覚える前にリズムを覚える。テンポを何拍子で取って、どこで声を出して、どこで息を吸って、アクセントをどこに置く。慣れたらメロディもつけていく。
+まずは口を開けて、口も顎も舌も喉も使わずに声帯と呼吸だけで声を出す。ハミングではないので鼻には通さない。
+腹以外の息は使わない。息は横隔膜を下げて支える。
