--- a/shared/music/アクセント.md
+++ b/shared/music/アクセント.md
@@ -2,3 +2,5 @@
 
 アクセントによって拍子を区分する。
 一般的に、四拍子なら強弱中弱、三拍子なら強弱弱のようにアクセントをつける。
+
+FAKE TYPE.とか歌詞が詰め込まれた曲は4/4でも6/8みたいに倍の数のアクセントで歌った方が歌いやすい。2つ目のアクセントを強めにして区切る。でもリズム感は4/4で。
