--- a/games/Street-Fighter/コマンド入力.md
+++ b/games/Street-Fighter/コマンド入力.md
@@ -7,3 +7,5 @@
 - 必要な入力の間に余計な入力が入っていないか
 - 入力が早くないか（斜め入力でボタンを押していないか）
 - 入力が遅くないか（横入力から10F以上遅れてボタンを押していないか）
+
+パッドの昇竜は下が抜けやすい。横、下、斜め、でなく、横、斜め、になりやすい。下を強く意識して入力しよう。
