--- a/shared/breath/息の支え.md
+++ b/shared/breath/息の支え.md
@@ -18,3 +18,6 @@
 強く息を吐き切った後に肺に十分な量の空気が残ってないといけない。息の支え。
 
 息の支えが強固になるほど声は自由になる。
+
+息の強さというかテンポは一定で、量は減らす。細く強い息でまず練習する。ただ、ある程度を超えると量を抑えるのも難しくなる。
+強さ自体は、アクセントのところで少し強くなる。でも量は一定。
