--- a/shared/discussion/持論.md
+++ b/shared/discussion/持論.md
@@ -8,3 +8,5 @@
 どの持論を支持するかでもいい。
 
 立場を明確にすることで、「こういう観点は考えられているか」「なぜそれを選んだのか」などのフィードバックを得られる。
+
+持論がないのに人の意見を聞いてしまうとそれに引きずられる。まずは自分の持論を用意して、相談するなら「せーの」で出す。
