--- a/shared/voice/training/tips/声を安定させる.md
+++ b/shared/voice/training/tips/声を安定させる.md
@@ -1,3 +1,12 @@
+## 安定した声とは何か
+
+- 息の量が一定
+- テンポが一定
+- テンション、キーが一定
+- ポジション、響きが一定
+
+## メモ
+
 声の揺れや震えを抑える。
 
 声を安定させるには、息を安定させて、喉を広げる。
@@ -78,3 +87,5 @@ https://youtu.be/dpm_YauvTDs?si=I8dM0qUOKjpOts8d
 sの発音を長く出したまま、息と声の配分を100:0から0:100、0:100から100:0までゆっくり遷移できるようにする。途中でsが切れたり 逆に大きくなったりするのはおかしい。
 
 まずは出しやすい音で安定したロングトーンを出せるようにするのと、2度の自然なピッチコントロールから。
+
+息の圧は一定にすると抑揚がなくなる。
