--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -160,3 +160,5 @@ https://youtube.com/watch?v=XWGCrPW6e-M&si=zPTuAuo2jKXU7pQ7
 真似しようとすると普通は高い声が出ない。
 
 浴槽とネオンテトラはヤンデレの歌なので、色っぽく、嗜虐的なイメージ。
+
+声色を変える時は声のポジションが変わる。逆にいうと、声のポジションが不安定だと無駄に声色や響きが変わってしまう。
