--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -188,3 +188,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 
 喉を下げるよりもまず腹から声を出すことを意識する。腹から声を出さないと喉で締めて息を強くしてしまう。
 腹から声を出すと喉を下げて低い位置で息を受け止めたほうが自然で楽。
+
+喉を下げて声を出す前に、喉を広げても腹から強い息を吐けるようにしないといけない。
