--- a/shared/voice/training/tips/喉を広げる.md
+++ b/shared/voice/training/tips/喉を広げる.md
@@ -1,6 +1,7 @@
 ## 概要
 
 - 顎を少し上げる（気道をまっすぐにする）
+- 顎を前に開く（下に開くと喉側に巻き込んでしまう）
 - 喉を下げる（甲状軟骨を前に倒す）
 - 首の筋肉で外に引っ張る
 - 喉頭蓋を開く
@@ -227,3 +228,6 @@ https://youtu.be/6ppS_HSlozM?si=kcE2drhJdUFLMUyA
 息を吸う時は抵抗を作った方が横隔膜を下げる感覚が得られるけど、喉や鼻で息を吸う音がなるということはどこかが締まっているということ。
 
 喉を締めたりして声の通り道を狭めるとコントロールしやすくなるメリットもあるが、声は硬くなる。コントロールは技術的にどうにでもなるので、まずは声を邪魔しないことを重視するべき。
+
+顎の動きは、耳の前の関節を軸に回転させて下に開く方法と、顎を前に出して前に開く方法がある。
+下に開くと顎が首側に近づいてしまう動きをするので、前に開いたほうが喉を広げやすい。
