--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -3,7 +3,7 @@
 シミーや差し返しは2MP(pc)が基本で、余裕があったら2HP(pc)が狙えると強い。
 まぁ、2HPは最悪ガードされても強ネクサスなら大した隙はない。
 
-DリバはMP(pc)から。
+DリバはMP(pc)から。MP(+2), 4HPが届かないので、MP(+4), HKにする。
 
 16F以上の隙には6HK(pc)から。
 
@@ -37,13 +37,28 @@ DリバはMP(pc)から。
 ## MP(+2)
 
 - MP(+2), 4HP, 強ニー, 弱アッパー: 3210 34F
+- {中央} MP(+2), 4HP, 中ショット, DR(1F長め) 4HP, 強アッパー-h: 3860
+- {端} MP(+2), 4HP, (遅らせ)中ショット, DR 4HP, 強アッパー-h: 3860
 - MP(+2), 4HP, 強ニー, ODアッパー: 3560
+- MP(+2), 2MP-HK, SA1: 3540
+- MP(+2), 2MP-HK, SA2: 4100
+- MP(+2), 4HP, 強ニー, 弱アッパー, SA3: 5210
 
-## {Dリバ} MP(pc)
+## MP(+4)
 
-- MP(pc), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h: 3568
-- {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h: 3700
-- {端} MP(pc), HK, ODノヴァ, 4HP, 強アッパー-h: 4000
+- MP(+4), HK(1), 強ノヴァ, 強アッパー: 2960 28F
+- {端} MP(+4), HK(1), 強ノヴァ, 4HP, 強アッパー-h: 3580
+- MP(+4), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h: 3448
+- MP(+4), HK, ODノヴァ, DR 4HP, 強アッパー-h: 3748
+- MP(+4), HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA1: 3825
+- MP(+4), HK(1), 強ノヴァ, 6HK, SA2: 3810
+- MP(+4), HK(1), 強ノヴァ, 6HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 3570 (端から端まで運ぶ)
+- {端} MP(+4), HK, ODノヴァ, 4HP, 強アッパー-h: 4000
+- MP(+4), HK, ODノヴァ, 強アッパー, SA3: 5260
+- MP(+4), HK, CR HK, 強ノヴァ, 強アッパー, SA3: 5390
+- MP(+4), HK, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5537
+
+DリバはMP(+2), 4HPが届かないのでこっち。単純に伸ばしやすいのもこっち。
 
 ## 2MP
 
