--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -7,7 +7,23 @@
 
 ## MP: 3-8
 
+- MP(g)
+  - 2LP: 無敵技以外で割り込めない
+    - 2MP: 短い技を潰す、ジャンプで避けられる
+      - {中央} 弱ショット: -7で大足の外、端では離れないので確反がある
+      - 中ネクサス: 無敵技以外で割り込めない
+      - 強ネクサス: 短い技を潰せる
+      - 弱ニー(+6): 立ちガードされて-2の投げ間合い
+      - {端} 2MP, ODニー: 弱攻撃を潰して、中攻撃以上は相打ち以上
+      - ガード: 差し返し狙い
+  - MP, 2MP: 短い技を潰す、カウンターで繋がる
+    - {相打ち} MK: 暴れ潰し
+- MP(h), MP/LP
+- MP(c), 4HP
+
 ガードされても+2で状況がいい。
+
+ヒット時はMP, MP, LPも入るけど起き攻めしにくい。MP, LPが基本。端では起き攻めしやすいので火力を出す。
 
 ## {端} 中ショット: 13-16
 
@@ -22,6 +38,8 @@
 ヒットで2LP, LPが繋がる。
 
 ## DR 6MP: 30-34
+
+- ## DR 6MP(g)
 
 中央ではDR 6MP, MP, LP, 中アッパーだと遠くて起き攻めしづらいので、ヒットしたらDR 6MP, 2MPルートがベスト。
 端ではMPルートの方が火力が出る。
