--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -29,19 +29,16 @@
 
 中強ショットがコンボになる距離を覚える。
 
-### ジャンプ攻撃のコンボ
+### ジャンプ・ラッシュ攻撃のコンボ
 
-- J.HP(h), 4HP, 強ニー, 弱アッパー, SA3
-- J.HP(g), 4HP, 中ショット: 連続ガードにする
-  - {中央} 2LP, 2MP, 弱ショット, ガード
-  - {端} MP, 2LP, 2MP, 弱ショット, ガード
+- J.HP/DR MP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
+- J.HP/DR MP(g)
+  - HK(h), ODノヴァ, 強アッパー, SA3
+  - HK(g), 中ネクサス
+    - マイト(h), 前投げ
+    - マイト(g), ガード
 
-<!-- ガードからは中ネクサスの方がいい？強いけど複雑。 -->
-
-### ラッシュ攻撃のコンボ
-
-- DR MP(h), 4HP, 強ニー, 弱アッパー, SA3
-- DR MP(g), MP, 2MP, 弱ショット, ガード
+端ではラッシュしなくても4HPga
 
 ### 昇竜やSAの確反
 
