--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -271,21 +271,20 @@ HKの2段目からは強ノヴァが繋がらない。
 - DI(pc), ステップ, 4HP, 強ニー, SA2-6, DR 4HP, 強ニー, 中アッパー: 3882 (端から端まで運ぶ)
 - DI(pc), ステップ, 4HP, 強ニー, 中アッパー, SA3: 5350
 
-## {端|近} DI(壁), 4HP
+## DI(壁)
 
-- DI, 4HP, 強アッパー-h: 3400
-- DI, 4HP, 中ニー, SA2: 3940
-- DI, 4HP, 中ニー, 中アッパー, SA3: 4980
+- DI(壁), ({遠} ステップ), 4HP, 強アッパー-h: 3400
+- DI(壁), 6HK, SA2: 3467 (2:3275)
+- {近} DI(壁), 4HP, 中ニー, SA2: 3940 (2:3760)
+- {近} DI(壁), 4HP, 中ニー, 中アッパー, SA3: 4980
+
+DIのあとに密着できるのが{近}、4HPが届かなくて高めに壁ドンするのが{遠}の状況。
 
 4HPが届かなかったらDR 4HPにする。
 
 相手の頭が壁から離れるくらいまでは歩ける。
 
 中ニーは壁ドンが高いと当たらない。
-
-## {端|遠} DI(壁)
-
-- DI, 強アッパー-h: 3040 (近すぎると間に合わない)
 
 ## {遠} 中ショット/{空} 強ショット
 
