--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -45,6 +45,7 @@
 - 中ニー: 遠めなら確反がない、しゃがんでいるとガードされても+2で投げ間合い
 - 強ショット: 速い弾
 - 中ショット, 強ショット: 2MP先端キャンセルくらいの距離でもジャンプできない
+- 中ショット, 強ニー: 初期位置くらいの距離で先端当てを狙う、その距離ならジャンプもできない
 
 まずは強ショットが基本で、たまに中ショットで緩急をつける。
 それ以外は距離によって使い分ける。
