--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -5,25 +5,15 @@
 
 ## 初級
 
-### 対空
-
-（対空練習）
-
-- 弱アッパー
-  - DR 6LK/6MP, 2MP, 強ニー
-
-起き攻めは目押しで重ねて、フレームメーターで隙間がないのを確認する。
-
 ### 飛び道具と対空
 
 （ダミー設定 > ガード: すべてガード）
-（ダミー設定 > 起き上がり: ランダム）
-（反撃設定 > ダウンリバーサル: 前方ジャンプ/垂直ジャンプ）
 （反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ）
 
 - 前進, 強ショット, ガード
 - 前進, 中ショット, 強ショット, ガード: ジャンプできない距離を覚える
-- {前方ジャンプ}, 中アッパー, 中ショット
+- {垂直ジャンプ}, 強ショット: 垂直ジャンプを見てからできるだけ早く出す
+- {前方ジャンプ}, 弱アッパー, DR 6LK/6MP: フレームメーターで重なっているのを確認する
 
 前進からショットでアッパーが漏れないようにする。
 
@@ -38,7 +28,7 @@
     - マイト(h), 前投げ
     - マイト(g), ガード
 
-端ではラッシュしなくても4HPga
+端ではラッシュしなくても4HPが入る。
 
 ### 昇竜やSAの確反
 
@@ -55,7 +45,11 @@
 
 ### 壁インパクトのコンボ
 
-- DI(壁), 4HP, 強アッパー-h, SA3
+- {近} DI(壁), 4HP, 強アッパー-h, SA3
+- {遠} DI(壁), ステップ, 4HP, 強アッパー-h, SA3
+
+端から2本目の太い線を両キャラが踏むくらいの距離だと4HPが届かないのでステップが必要。
+状態を保存して繰り返し練習する。
 
 ## 中級
 
