--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -10,14 +10,19 @@
 （ダミー設定 > ガード: すべてガード）
 （反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ）
 
+- 前進, 中ショット, 強ショット: ジャンプに引っ掛ける
 - 前進, 強ショット, ガード
-- 前進, 中ショット, 強ショット, ガード: ジャンプできない距離を覚える
-- {垂直ジャンプ}, 強ショット: 垂直ジャンプを見てからできるだけ早く出す
-- {前方ジャンプ}, 弱アッパー, DR 6LK/6MP: フレームメーターで重なっているのを確認する
+  - {垂直ジャンプ}, 強ショット, ガード: 垂直ジャンプを見てからできるだけ早く出す
+  - {前方ジャンプ}, 弱アッパー: 対空
+    - DR 6LK/6MP(g)
+      - {垂直ジャンプ}, 弱アッパー(表)
+      - {前方ジャンプ}, 弱アッパー(裏): 振り向き昇竜
 
 前進からショットでアッパーが漏れないようにする。
 
 中強ショットがコンボになる距離を覚える。
+
+ガードリバーサルにDIを加えてもいい。
 
 ### ジャンプ・ラッシュ攻撃のコンボ
 
@@ -53,10 +58,18 @@
 
 ## 中級
 
-### 弱攻撃のコンボ
+### ラッシュ下段
 
-- 2LK(h), LP, 中アッパー, SA3
-- 2LK(g), LP, 弱ショット, ガード
+- DR 6LK(h), 2MP, 強ニー
+  - DR 6LK, ...
+
+### 6LKのヒット確認
+
+- 6LK(c), LP, 中アッパー
+  - DR 6LK(h), 2MP, 強ニー, DR 6LK, ...
+  - DR 6LK(g), 2LP, 2MP, 弱ショット, ガード
+- 6LK(h), LP, 弱ショット, ガード
+- 6LK(g), ガード
 
 ### リターンの高い対空
 
@@ -66,14 +79,6 @@
   - 中ショット, 強ショット, ガード
 
 自分が技を出してない時に狙う、リターンの高い対空。
-
-### 6LKのヒット確認
-
-- 6LK(c), LP, 中アッパー
-  - DR 6LK(h), 2MP, 強ニー, DR 6LK, ...
-  - DR 6LK(g), 2LP, 2MP, 弱ショット, ガード
-- 6LK(h), LP, 弱ショット, ガード
-- 6LK(g), ガード
 
 ### HPのヒット確認と中下段
 
