--- a/games/Street-Fighter/Six/theory/対空.md
+++ b/games/Street-Fighter/Six/theory/対空.md
@@ -30,3 +30,5 @@
 
 自分が何も技を振ってない時は、無敵がないけど入力しやすい対空でもいい。
 たとえばリュウなら、普段は2HPで対空して、自分が技を振った時、特に波動拳を出した時だけは上を見て昇竜拳を入力できるようにする。
+
+春麗はジャンプが遅いので、まずは春麗のジャンプから練習してもいいかも。
