--- a/shared/breath/息の支え.md
+++ b/shared/breath/息の支え.md
@@ -21,3 +21,5 @@
 
 息の強さというかテンポは一定で、量は減らす。細く強い息でまず練習する。ただ、ある程度を超えると量を抑えるのも難しくなる。
 強さ自体は、アクセントのところで少し強くなる。でも量は一定。
+
+横隔膜を下げた腹式呼吸は外側の腹筋でなく内側の腹筋を使う。腹よりは背中から斜め上に押し上げる感覚。
