--- a/shared/learning/知識と経験の循環.md
+++ b/shared/learning/知識と経験の循環.md
@@ -19,3 +19,7 @@
 知識は検証によって経験になり、経験は抽象化によって知識になる。
 
 経験に頼った考えはサンプル1でしかない。サンプルが足りない。
+
+自分の一人の経験から得られる知識なんて、歴史として残っているだけでも何千年とある人類全体の知識からすると塵みたいなものだ。
+
+知識がどれだけあっても習慣として落とし込むには時間がかかる。逆に、経験頼りで知識がないのもワンパターンでつまらない人間になる。バランスを取るのが大事。
