--- a/shared/leisure/examples/travel/jp/東京.md
+++ b/shared/leisure/examples/travel/jp/東京.md
@@ -18,3 +18,5 @@ https://www.tokyo-zoo.net/zoo/ino/hanagoyomi/index.html
 多摩動物公園で園内バスに乗れるならオランウータンの前までバスで行くと楽。
 
 東京競馬場には公園もフードコートもある。
+
+国際展示場まで新宿から埼京線で25分。意外と早い。
