--- a/shared/music/vocal/training/tips/曲を覚える.md
+++ b/shared/music/vocal/training/tips/曲を覚える.md
@@ -106,3 +106,5 @@
 歌詞を覚える前にリズムを覚える。テンポを何拍子で取って、どこで声を出して、どこで息を吸って、アクセントをどこに置く。慣れたらメロディもつけていく。
 まずは口を開けて、口も顎も舌も喉も使わずに声帯と呼吸だけで声を出す。ハミングではないので鼻には通さない。
 腹以外の息は使わない。息は横隔膜を下げて支える。
+
+曲を覚えてリズムやメロディを合わせるのに余裕が出てきたら、フレーズの終わりの処理やブレスの処理とか細かく詰めていきたいところ。完璧にこそ感動がある。
