--- a/shared/trust/警戒をとく.md
+++ b/shared/trust/警戒をとく.md
@@ -117,3 +117,6 @@ https://diamond.jp/articles/-/118539
 そもそも人間を信用してない、警戒している人は信頼を示すのが難しい。細かい態度から警戒が伝わってしまう。根本的な人間不信を隠すのは難しい。
 
 人間不信なのにホストとかにハマる人は人間嫌いではないのだろう。
+
+怪しいと警戒される。
+情報を隠すと怪しい。
