--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -136,3 +136,5 @@ Lose-WinをLose-Loseに持ち込む。
 
 戦いでは、生き延びた者が勝者。
 ゲームとしての勝者とは違う。訓練に偏りすぎると戦いを忘れる。
+
+争いを解決できないなら戦う意味がない。ただ戦うのではなくて、相手が戦う気を無くすか死ぬまでが戦争。そうでないならただの遊戯でしかない。遊戯と戦争の違いはそこ。遊戯は何もしなくても勝負が決したら終わりだけど、戦争はそうではない。
