--- a/study/politics/政治.md
+++ b/study/politics/政治.md
@@ -104,3 +104,5 @@ business は交換条件、取引による政治。
 「人を抱擁し、人が集まってくるような人でなければ、政党の大幹事長にはなり難いのであります。」（田中角栄）
 
 君主制や寡頭制でも国を大きく発展させるような偉人は100年に数人しかいない。そのレベルでは寡頭制にも無理がある。そもそも国レベルの規模の問題は人間の手に余る。優れてるとか劣ってるとかそういうレベルの話ではない。
+
+政治とは、契約や約束を成立させることなのかも。
