--- a/games/Street-Fighter/Six/theory/差し合いの基本.md
+++ b/games/Street-Fighter/Six/theory/差し合いの基本.md
@@ -162,3 +162,10 @@
 こちらが踏み込むからこそ相手も牽制技を振ってくる。そうなったら次は差し返しを狙う。そしたら今度は相手が踏み込んでくる。この読み合いの繰り返し。
 
 牽制技は狙って置かないといけない。相手が下がっているのに置いたら差し返される。まずは差し込みと差し返しだけで差し合いするのが基本。
+
+相手が牽制してこないなら踏み込んで触ってしまっていい。ただ、一気に歩くと弾やスライディングに引っかかりやすいので、あと一歩のところまでは慎重に進んで、一歩踏み出して触る。
+逆に、相手が牽制してくるならわざわざリスクを冒さなくても差し返しだけでいい。
+自分としても牽制しすぎると差し返しを狙われるので、自分から踏み込んで触ったり、フェイントから手を出させて差し返したりすればいい。
+
+足が速いキャラの差し合いは自分から動いて間合いを決めにいく。
+足が遅いキャラの差し合いはどっしり構えて適切な技を振る。
