--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -75,7 +75,13 @@
 
 シミーは2MPが無難。ODネクかTC。ラッシュも楽ではある。余裕があれば2HP強ネク。
 
+## 守り
+
+端でも強ショットやニーが強いし、ステローも強いので、素直にガードで待ってもいい。手を出してこないならコパンや中パンからネクサスでもいいし。
+
 ## メモ
 
 かずのこはステローとニーをめっちゃ使ってる。あと密着はMPMP2MP弱ショットとかできっちり離す。当たってたらMPLPアパカ。
 ノヴァからはステハイアパカ。ステハイからはSA1、2も入るし便利そう。でも普通にやるとステハイアパカ入らないけどどうやってるんだ？
+
+サガットは密着付近の距離の判別が難しい。歩きに頼れないので連携で距離を取りたいけど、近すぎると弱中パンが割り込まれるし、遠すぎると弱弱パンが届かない。ワンパンからショットだとショットに確反がある。中間択としては中パンネクサス。
