--- a/shared/music/vocal/training/初期の練習.md
+++ b/shared/music/vocal/training/初期の練習.md
@@ -1,2 +1,3 @@
-最初はしゃくりやフォールが常にある歌い方の方が正しい。滑らかに音程を移動する。
+最初はしゃくりやフォールが常にある歌い方の方が正しい。レガート。滑らかに音程を移動する。
+ただ、声帯が鍛えられるまでは移動に時間がかかる。素早く切り替えられなくてしゃくりやフォールが目立ってしまう。
 そこから同じ歌い方でしゃくりやフォールが目立たないくらい素早く音の高さを変えられるようにする。
