--- a/shared/cooking/recipes/スコーン.md
+++ b/shared/cooking/recipes/スコーン.md
@@ -56,3 +56,5 @@ https://youtu.be/LofcIMc1AZQ?si=wQZQJmHbOWGnwaiq
 スコーンは卵なしで砂糖の量を増やすと柔らかくなって潰れやすい。
 
 https://mi-journey.jp/foodie/94573/#choko
+
+スコーンの目が細かすぎるのは、こねすぎかも。ゴツゴツした感じの焼き上がりにしたいなら生地は粉っぽくていい。
