--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -28,6 +28,13 @@
 基本的には強ニーが先端当てになり、中強ショットがコンボになる遠めの距離が強い。最遠距離から一歩前くらい。
 端では中強ショットの距離が近くなるので、中ニー先端当ての距離を維持する。
 
+見てからインパクトで返される技が多い。
+あと見てからでなくても雑なインパクトに引っかかる技が多い。
+ニー、ショット、MK、HP、6LK、あたり。
+
+ただでさえインパクトやジャンプを狙われやすいので、インパクトに弱い技は頻繁に振れない。
+まずは2LP、2MP、2HP、あたりが基本。6LKも意外と隙がない。
+
 ## 差し込みの選択肢
 
 - 2LP, 弱ショット
