--- a/games/Street-Fighter/コマンド入力.md
+++ b/games/Street-Fighter/コマンド入力.md
@@ -1,4 +1,4 @@
-コマンド入力に1Fはかかるけど、実際は3-5Fかかることもある。
+コマンド入力にひとつ1Fはかかるけど、実際は3-5Fかかることもある。
 下下とか同じボタンを押すと特に長くなる。
 
 波動コマンドが出ない時は、次のような視点で入力を確認しよう。
@@ -9,3 +9,5 @@
 - 入力が遅くないか（横入力から10F以上遅れてボタンを押していないか）
 
 パッドの昇竜は下が抜けやすい。横、下、斜め、でなく、横、斜め、になりやすい。下を強く意識して入力しよう。
+
+パッドで左波動が苦手なら、左昇竜も左斜め下、下を波動拳のようにスライド入力して、そのまま斜めに戻すのが入力しやすい。左、下、左斜め下、だと左波動と似たような入力になる。
