--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -167,3 +167,5 @@ SA3があるなら、BOしても相手も簡単には攻められない。
 DIを拒否するなら、ジャンプより投げ。もちろん割り込めないなら無敵技しかないけど。
 
 キャンセルラッシュには最速で無敵技を合わせるのが基本。連続ガードにはガードから普通に読み合い。相手は3ゲージ使っているので、リーサルでないなら投げられていい。連続ガードの時に無敵技を漏らさないように注意。
+
+どくらさんは小技や入れ込みでどれだけ押し返せるかを「小回りが効く」と言っていた。
