--- a/games/Street-Fighter/Six/tips/モダンかクラシックか.md
+++ b/games/Street-Fighter/Six/tips/モダンかクラシックか.md
@@ -8,3 +8,6 @@
 
 弱いのにMを避けている人はエンジョイ勢なので、勝てなくてもMを恨むのはお門違い。雑魚がかっこつけてるだけ。
 でもグラマスあたりになると単純に性能が足りなくてCにしている。ほとんどのキャラはCの方が火力も高いし立ち回りも強い。逆に言うとハイマスくらいまではMでも全然いける。このクラスになるとMを恨む人はいない。Cの方が強いと思ってやってる。
+
+スト6でクラシック操作を使うなら、「なぜモダン操作でコマンド入力ではダメなのか？」に答えられないといけない。
+たとえば、「使いたい技がないから」とか「AUTOとの同時押しが難しいから」とか。
