--- a/shared/decision/frameworks/fortune/telling/占い師.md
+++ b/shared/decision/frameworks/fortune/telling/占い師.md
@@ -9,3 +9,6 @@
 悩んでいることはだいたいどれを選んでも変わらないけど、悩む前に口を出してしまうとまだ選択肢の質が低い。まず選択肢の質を高めてから無作為に選ぶ、という手順が重要。
 
 占いで変に根拠を提示してくる人は詐欺師だと思っていい。むしろ信じるべきではない。占いに根拠などない。
+
+占い師はアドバイザーなので、占いが当たってると思ってもアドバイスがカスなら無視しないといけない。
+たとえば細木和子みたいに「芸名を変えなさい」とか「地獄に堕ちる」みたいなくだらないことばっかりだとカスの占い師。
