--- a/shared/human/body/体力.md
+++ b/shared/human/body/体力.md
@@ -14,3 +14,9 @@
 - 回復力
 
 疲れていると家事や風呂ですら面倒になる人がいる以上、根気よく目標のために動き続けられるかどうかは体力で決まる。習慣化がどうとかはその後の話。
+
+体力がない人の特徴:
+
+- 内臓（特に消化器）が弱い。
+- 日光に弱い。
+- 肺活量が少ない。
