--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -88,9 +88,13 @@
 
 端でも強ショットやニーが強いし、ステローも強いので、素直にガードで待ってもいい。手を出してこないならコパンや中パンからネクサスでもいいし。
 
+サガットは2MPや2HPの判定が強くて遅いので、割り込みポイントは他のキャラよりも離れたところ。変なところで攻め継続してくる相手はジャンプや無敵技で暴れる。
+
 ## メモ
 
 かずのこはステローとニーをめっちゃ使ってる。あと密着はMPMP2MP弱ショットとかできっちり離す。当たってたらMPLPアパカ。
 ノヴァからはステハイアパカ。ステハイからはSA1、2も入るし便利そう。でも普通にやるとステハイアパカ入らないけどどうやってるんだ？
 
 サガットは密着付近の距離の判別が難しい。歩きに頼れないので連携で距離を取りたいけど、近すぎると弱中パンが割り込まれるし、遠すぎると弱弱パンが届かない。ワンパンからショットだとショットに確反がある。中間択としては中パンネクサス。
+
+ネクサスの入れ込みが結構短くて難しいところ。中パン先端から届かないこともある。ネクサスをガードさせること自体は強い。
