--- a/shared/decision/information/情報.md
+++ b/shared/decision/information/情報.md
@@ -183,3 +183,5 @@ communication, decision, observation あたりは関連がある。
 https://share.google/qJIl8gO83xEZQZjbk
 
 頭の悪い人が情報を持っていてもどうせまともな判断はできない。まずは自分の愚かさを理解するだけの頭が必要だけどそれもない。
+
+それを得てリスクが下がらないなら、情報ではなく嘘と呼ぶ。
