--- a/shared/design/凝集.md
+++ b/shared/design/凝集.md
@@ -71,6 +71,13 @@ IPA では「強度」とも呼ばれる。
 
 凝集すると認知負荷を減らせる。必要以上に広い範囲を見なくて済む。
 
+設計の基本は、
+
+- 一緒に使うものを近くにまとめる
+- 混ぜてはいけないものを遠ざける
+
+の二つ。凝集。
+
 ## Reference
 
 https://speakerdeck.com/sonatard/coheision-coupling
