--- a/shared/hope/欲.md
+++ b/shared/hope/欲.md
@@ -1,3 +1,5 @@
+# Greed
+
 > そう、そうですよね。
 > 理性も欲望もひとりのわたしですから。
 >
@@ -32,3 +34,21 @@ Hope
 自らの願いを叶えるために、周りが勝手に手伝うのは限界がある。
 自らが責任を負って、宣言して、対価を支払わなければならない。
 それが欲を持つということ。
+
+「肉が食べたい」と思っていても、500gも食べたら腹一杯になる。やりたいことであっても、その量はコントロールしないと幸せになれない。飽きる。
+
+生物が変化を起こそうとする感覚。
+
+普段の嗜好から好きなもの、よく選んでいることを考えて、それを抽象化する。テーマであったり、さまざまな特徴を分析する。ストーリーならシチュエーションとか、キャラクターとか。
+
+好み、性癖、フェチズム、こだわり、推し、といったものからやりたいことを考える。
+
+良い存在になりたいという内発的な欲求と、周りから良く思われたいという外発的な欲求がある。
+外発的な欲求は意義と言ってもいいかも。
+
+外発的な欲求を満たすためには、自らを成長させなければならない。それ自体は内発的な動機になる。
+
+欲求を別のところで解消するのは良くない。
+例えば、女性の声が聞きたいからと言って、風俗や配信に入り浸るとか。
+
+欲望、衝動、リビドー。
