--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -67,3 +67,5 @@
 女性は社交が強くて仕事が弱い。社交が好きな人は仕事向きではない。
 
 人に対して悪意を持って接すると、相手にも悪意を持った人しか残らない。善き人は淘汰されてしまう。
+
+「誰にも喜んで見せなくていい。自分の心の中だけで感じたことが全部。」『雑用付与術師が自分の最強に気付くまで』
