--- a/shared/society/社会.md
+++ b/shared/society/社会.md
@@ -93,3 +93,5 @@ businessやcommunityも社会の一部。
 社会はコミュニティとは限らない。対立もまた社会。
 
 社会にとって別にいらない人を生かす必要があるかどうか、あるいはその余裕があるかどうか、という問題。
+
+「どう考えても社会に対して肯定的な人たちじゃない。」『雑用付与術師が自分の最強に気付くまで』
