--- a/games/Street-Fighter/コマンド入力.md
+++ b/games/Street-Fighter/コマンド入力.md
@@ -10,4 +10,4 @@
 
 パッドの昇竜は下が抜けやすい。横、下、斜め、でなく、横、斜め、になりやすい。下を強く意識して入力しよう。
 
-パッドで左波動が苦手なら、左昇竜も左斜め下、下を波動拳のようにスライド入力して、そのまま斜めに戻すのが入力しやすい。左、下、左斜め下、だと左波動と似たような入力になる。
+左波動が苦手なら、左昇竜も左斜め下、下を波動拳のようにスライド入力して、そのまま斜めに戻すのが入力しやすい。左、下、左斜め下、だと左波動と似たような入力になるので合わない。逆も然り。
