--- a/shared/war/弱者と強者の違い.md
+++ b/shared/war/弱者と強者の違い.md
@@ -1,3 +1,6 @@
 弱かったら、勝てる時は徹底的に勝って、相手がもう手を出したくなくなるようにしないといけない。殺すのが一番いい。
 
 弱いのは悪だ。
+
+10回に10回勝てるような戦い方は強者の戦い方。
+弱者はむしろ確率の偏りを狙って、1000回に1回の勝ちを今拾うような戦い方が必要。
