--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -140,3 +140,5 @@ Lose-WinをLose-Loseに持ち込む。
 争いを解決できないなら戦う意味がない。ただ戦うのではなくて、相手が戦う気を無くすか死ぬまでが戦争。そうでないならただの遊戯でしかない。遊戯と戦争の違いはそこ。遊戯は何もしなくても勝負が決したら終わりだけど、戦争はそうではない。
 
 「戦う覚悟なんて…そんなもん手に入れなくていいんだよ、本当は。でも、しょうがなく、手に入れちまうんだ。戦わないと、守れないものがあるから、僕達は守るために戦うんだ。」『廻天のアルバス』
+
+命を守るためには戦うときもある。戦いの準備を欠かせば命を失う。
