--- a/shared/voice/training/tips/声を安定させる.md
+++ b/shared/voice/training/tips/声を安定させる.md
@@ -104,3 +104,5 @@ sの発音を長く出したまま、息と声の配分を100:0から0:100、0:1
 2. (1) の感覚のままハミングする
 3. (2) の途中で「あー」に切り替える
 4. (3) で「あー」になってから音程を変えてみる
+
+息や声を抑えつけて安定させるのではなく、根本から安定させる。
