--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -96,6 +96,7 @@ MP(g)より少し近い。
 
 - ステップ, 6MP(+1): ヒットで2LP, LPが入る、ガードで-1
 - 弱ニー: +3
+- ステップ, 中ショット: 端ではガードさせて投げ間合いとシミー
 
 ## 6HK: 4
 
@@ -205,15 +206,31 @@ J.HP, 4HP, 中ショットなどで繋いでも密着できる。
 
 ## マイト(c): 25
 
-- ステップ: +2
+- ステップ: +2の投げ間合い
+  - バクステ, {通常投げ}, 2MP: シミー
 
 ## {立} グリード(g): 4
 
 投げ間合い。
 
-## {立} グリード(c): 25
+- 後退: シミー
+
+## {立} グリード: 48
+
+- 中ニー: +2の投げ間合い
+  - {後方受け身}, 後退: シミー
+
+## {空} グリード: 51
+
+ネクサスカウンターヒットなどから当たった場合は空中ヒットになる。
+
+## {空} マイト(c): 25
 
 - 中ニー(+8): ガードされて+1の投げ間合い
+
+## ノヴァ(g): 2
+
+- 後退: シミー
 
 ## ノヴァ
 
@@ -300,7 +317,9 @@ DIがギリギリ届かない。
 
 ## SA1: 22
 
-- {端} 6MP(+1)
+- {端} 6MP(+1): 中段、ヒットで+4、ガードで-1の投げ間合いの外
+- {端} 中ショット(+7): ヒットもガードも+10の投げ間合いギリギリ。しゃがみ最速暴れに当たらない。
+  - {ガード}, 後退: シミー
 
 ## SA2-2: 19
 
