--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -51,8 +51,10 @@
   - 2LP, LP/2LP, 弱ショット: -7で大足の外、無敵技以外で割り込めない、ヒットしたら中アッパーにしたい
   - 2LP 2回
     - 2MP: 2MPで弱攻撃を外から潰す、8F遅れ
+  - 通常投げ: 4F遅れ
+  - 後退: シミー
 
-下段。遠めの起き攻めでよく使う。
+下段。遠めの起き攻めでよく使う。めり込んだら投げ間合いギリギリ。
 
 ## 弱ニー(+8): 21-23
 
