--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -266,6 +266,9 @@ HKの2段目からは強ノヴァが繋がらない。
 - {空} 6HK, DR 2MP-HP, 強アッパー: 2704
 - {端空} 6HK, 4HP, 強アッパー-h, SA3: 5280
 
+6HK空中ヒットの有利フレームが最低46Fなので、それ以下の技なら失敗しても確反がない。
+基本的には端の4HPか、中央のDR 2MPがメイン。アッパーやSAはリスクが高い。
+
 ## {空} J.MP
 
 - {空} J.MP, 弱アッパー: 1800
