--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -7,6 +7,8 @@
 密着で攻撃をガードされたらそのまま連携で離さないと後ろ歩きが遅いけど、弱ショットが-7なので確反をもらうことがある。
 中間択としてはとりあえずネクサスに繋いでじゃんけんに持ち込む手もある。
 
+サガットはインパクトがきつい。ニーや弱ショットの隙が大きすぎて見てからでも結構確定してしまう。インパクトに勝てる入れ込み技もなくて不安定。小パンや中パンのフェイントで揺さぶるのが大事かも。
+
 ## 差し合い
 
 サガットは弾を撃つキャラではない。まずは中パン大パンやステロー。
