--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -39,15 +39,23 @@
 
 ## DR 6MP: 30-34
 
-- DR 6MP(g)
+- DR 6MP(g): +2で投げ間合いの外
   - 2LP, LP, 弱ショット: -5で大足の外
+  - MP(c/相打ち), 2MP, ...
+  - MP(g): 4F遅れ、相打ちで2MPが入る
+    - LP/2LP, 弱ショット: -5で大足の外
+    - LP/2LP, 弱ニー(+7): 立ちガードでも-1
+    - 2LP, 後退: 中足を避けて差し返し狙い
+    - 2MP, 中ネクサス:
+    - 後退
+  - 2LK, 2LP, 弱ニー
 
 中央ではDR 6MP, MP, LP, 中アッパーだと遠くて起き攻めしづらいので、ヒットしたらDR 6MP, 2MPルートがベスト。
 端ではMPルートの方が火力が出る。
 
 ## DR 6LK: 26-30
 
-- DR 6LK(g)
+- DR 6LK(g): +1で投げ間合い
   - 2LP, LP/2LP, 弱ショット: -7で大足の外、無敵技以外で割り込めない、ヒットしたら中アッパーにしたい
   - 2LP 2回
     - 2MP: 2MPで弱攻撃を外から潰す、8F遅れ
