--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -26,7 +26,8 @@
 
 ### ジャンプ・ラッシュ攻撃のコンボ
 
-- J.HP/DR MP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
+- J.HP/DR MP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h
+  - 強ショット
 - J.HP/DR MP(g)
   - HK(h), ODノヴァ, 強アッパー, SA3
   - HK(g), 中ネクサス
@@ -60,10 +61,22 @@
 
 ### ラッシュ下段
 
-- DR 6LK(h), 2MP, 強ニー
+（ガードリバーサル: 通常投げ/何もしない）
+
+- DR 6LK(h), 2MP, 強アッパー
   - DR 6LK, ...
+  - DR 前投げ, 強ショット
+- DR 6LK(g)
+  - 後退
+    - {通常投げ}, 2MP(pc)-HP, 強アッパー
+      - DR 6LK, ...
+      - DR 前投げ, 強ショット
+    - {何もしない}, ガード
+  - 前投げ, 強ショット
 
 ### 6LKのヒット確認
+
+（カウンター: ランダム、パニカンなし）
 
 - 6LK(c), LP, 中アッパー
   - DR 6LK(h), 2MP, 強ニー, DR 6LK, ...
