--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -26,11 +26,9 @@
 
 ### ジャンプ・ラッシュ攻撃のコンボ
 
-- J.HP/DR MP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h
-  - 強ショット
+- J.HP/DR MP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
 - J.HP/DR MP(g)
-  - HK(h), ODノヴァ, 強アッパー, SA3
-  - HK(g), 中ネクサス
+  - HK, 中ネクサス
     - マイト(h), 前投げ
     - マイト(g), ガード
 
@@ -47,7 +45,7 @@
 
 （ドライブインパクトへの対応練習）
 
-- DI(pc), ステップ, 4HP, 強アッパー-h, SA3
+- DI(pc), ステップ, 4HP, 強アッパー-h, 強ショット
 
 ### 壁インパクトのコンボ
 
@@ -151,3 +149,15 @@
 
 - DR 2MK, MP(h), LP, 中アッパー, SA3
 - DR 2MK, MP(g), LP, 弱ショット, ガード
+
+### キャンセルラッシュ
+
+- 2MP(h), CR MP, 4HP, 強ニー, 弱アッパー, SA3
+- 2MP(g), CR MP
+  - MP(g): 連続ガード
+    - MP, 2MP, 弱ショット
+  - 通常投げ
+
+### メモ
+
+- DI(pc), ステップ, 4HP, 強ニー, 中アッパー, SA3
