--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -241,6 +241,9 @@ J.HP, 4HP, 中ショットなどで繋いでも密着できる。
 
 - 中ニー: +2の投げ間合い
   - {後方受け身}, 後退: シミー
+- 弱ニー: +6で後方受け身には投げ間合いの外
+
+端では持続当ても狙えるけど、基本的には追撃したほうがいい。
 
 ## {空} グリード: 51
 
