--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -228,20 +228,24 @@ HK(1), 強ノヴァは相手が空中でも使える。
 
 HKの2段目からは強ノヴァが繋がらない。
 
-## 6HK
+## {立} 6HK
 
 - 6HK, 2MP, 強アッパー: 2720
 - 6HK, 2MP, 強ニー: 2560
 - 6HK, 2MP, CR HK, 強ノヴァ, 強アッパー: 3299
+- 6HK, 2MP, CR MP, 4HP, 強ニー, 弱アッパー: 3445
 - {端} 6HK, 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3659
 - 6HK, 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
 - 6HK, 2MP-HK, SA1: 3780
 - 6HK, 2MP-HK, SA2: 4340 (2:4130)
+- 6HK, 2MP, CR HK, 強ノヴァ, 6HK, SA2-6, DR 4HP, 強ニー, 中アッパー: 4021 (端から端まで運ぶ)
 - 6HK, 2MP, 強アッパー, SA3: 5120
-- 6HK, 2MP, CR HK, 強ノヴァ, 強アッパー, SA3: 5299
+- 6HK, 2MP, CR MP, 4HP, 強ニー, 弱アッパー, SA3: 5445
 - 6HK, 2MP, CR MP, HK, CR HK, 強ノヴァ, 強アッパー, SA3: 5592
 
-## 6HK(pc)
+SA1を使うルートのコスパがいいので、SA1があるなら不意に狙ってもいいかも。
+
+## {立} 6HK(pc)
 
 - 6HK(pc), 4HP, 強ニー, 弱アッパー: 3610
 - {端} 6HK(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h: 4000
