--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -72,6 +72,8 @@
     - {何もしない}, ガード
   - 前投げ, 強ショット
 
+### ラッシュ中段
+
 ### 6LKのヒット確認
 
 （カウンター: ランダム、パニカンなし）
@@ -91,19 +93,11 @@
 
 自分が技を出してない時に狙う、リターンの高い対空。
 
-### HPのヒット確認と中下段
-
-- HP(h)-HK
-  - DR 6LK/6MP, 2MP, 強ニー, DR 6LK/6MP, ...
-- HP(g), ガード
-
-### BOされた状態の削り
+### BOさせた状態の削り
 
 - 2LP(h) 2回, 弱ニー
 - 2LP(g) 3回, 弱ニー: 始動
   - 2LP(g), MP, 2MP, 弱ニー, ...: 以下繰り返し
-
-## 上級
 
 ### MPからの攻め
 
@@ -122,33 +116,22 @@
       - MP, ...
     - マイト(g), ガード
 
+## 上級
+
+### HPのヒット確認と中下段
+
+- HP(h)-HK, DR 6LK/6MP, ...
+- HP(g), ガード
+
+### MKのヒット確認
+
+- MK(h)-HK, DR 6LK/6MP, ...
+- MK(g), ガード
+
 ### Dリバの確反
 
 - MP(pc), HK(1), 強ノヴァ, 強アッパー, ステップ, MP, ...
 - {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h
-
-## その他
-
-### MKのヒット確認
-
-- MK(h)-HK
-  - 強ニー(+9)(h)
-    - {端} 弱アッパー
-  - 強ニー(+9)(g)
-    - 前投げ
-      - {中} 強ショット
-      - {端}
-- MK(g), ガード
-
-### 昇竜やSAの確反 2
-
-- 6HK(pc), 6HK, 2MP-HK, SA1
-- 6HK(pc), 6HK, 2MP-HK, SA2
-
-### ラッシュ下段 1
-
-- DR 2MK, MP(h), LP, 中アッパー, SA3
-- DR 2MK, MP(g), LP, 弱ショット, ガード
 
 ### キャンセルラッシュ
 
@@ -157,6 +140,18 @@
   - MP(g): 連続ガード
     - MP, 2MP, 弱ショット
   - 通常投げ
+
+## その他
+
+### 昇竜やSAの確反 2
+
+- 6HK(pc), 6HK, 2MP-HK, SA1
+- 6HK(pc), 6HK, 2MP-HK, SA2
+
+### ラッシュ下段
+
+- DR 2MK, MP(h), LP, 中アッパー, SA3
+- DR 2MK, MP(g), LP, 弱ショット, ガード
 
 ### メモ
 
