--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -298,9 +298,13 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
 
 MP, MP, LP, 中アッパーのように遠めで当てると持続当てになって29Fになる。
 
-## 中/強appa-(+1)
+## 中/強アッパー(+1): 28
 
 - {端} ステップ: +3
+- {中央} 弱ショット
+  - {前方ジャンプ}, 強アッパー
+
+MP, MP, LPなど遠目で当たると(+1)になる。
 
 ## 強アッパー-h: 23
 
