--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -99,22 +99,19 @@
 - 2LP(g) 3回, 弱ニー: 始動
   - 2LP(g), MP, 2MP, 弱ニー, ...: 以下繰り返し
 
-### MPからの攻め
+### MPのヒット確認
 
+（ダウンリバーサル: 前方ジャンプ/何もしない）
 （ガードリバーサル: 4F技/何もしない）
 
-- MP(h), 2LP, 中アッパー
-- MP(g), 2LP
-  - 2MP, 中ネクサス(c)
-    - マイト, 中アッパー
-  - 2MP, 中ネクサス(h)
-    - マイト, MP, ...
-  - 2MP, 中ネクサス(g)
-    - マイト(c)
-      - ステップ, MP, ...
-    - マイト(h)
-      - MP, ...
-    - マイト(g), ガード
+- MP(h)
+  - LP, 中アッパー
+    - DR 6LK, ...
+  - {端} MP, LP, 中アッパー: 端、または間違えてMPを出した場合のフォロー
+    - {中央} 中ショット
+    - {端} ステップ, MP/前投げ, ...
+- MP(g)
+  - MP, 2MP,
 
 ## 上級
 
@@ -135,11 +132,16 @@
 
 ### キャンセルラッシュ
 
+（ガードリバーサル: DI 4カウント）
+（ガードリバーサル: 何もしない）
+
 - 2MP(h), CR MP, 4HP, 強ニー, 弱アッパー, SA3
 - 2MP(g), CR MP
   - MP(g): 連続ガード
     - MP, 2MP, 弱ショット
-  - 通常投げ
+    - MP, 2HP, 強ネクサス
+  - 通常投げ: 少し遅らせる
+  - 後退
 
 ## その他
 
