--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -287,6 +287,12 @@ J.HP, 4HP, 中ショットなどで繋いでも密着できる。
 
 MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
 
+## 弱アッパー(+2): 34
+
+- {端} 2MP: +8
+
+4HP, 強ニー, 弱アッパーなどで頻出する。
+
 ## 中/強アッパー: 27
 
 - DR 6LK: 離れるコンボだと届かないことがある
