--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -4,6 +4,9 @@
 足が遅くてシミーしづらい。
 シミーは基本的にバクステから。
 
+相手のSAが1までなら弾を重ねるのも強い。
+中ショットになるので最速しゃがみ攻撃暴れには負けるけど、基本的に中段との択になる。
+
 ## BOさせた場合の攻め
 
 - 連続ガードになる削りはコンボ参照。
