--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -25,9 +25,11 @@
 
 ヒット時はMP, MP, LPも入るけど起き攻めしにくい。MP, LPが基本。端では起き攻めしやすいので火力を出す。
 
-## {端} 中ショット: 13-16
+## {端} 中ショット(+1): 16-23
 
-持続当てになる。
+持続当てになる。ヒットでもガードでも同じ硬直。
+
+(+1)なら2LPまでだが、(+3)からはMP, LPが入るし、
 
 ## {端} OD上ショット: 18
 
@@ -37,7 +39,8 @@
 
 ## 6MP(+1): 22-23
 
-ヒットで2LP, LPが繋がる。
+ド密着ならヒットで2LP, LPが繋がる。
+遠目でも(+2)ならLP, 中アッパーが安定。
 
 ## DR 6MP: 30-34
 
