--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -61,16 +61,14 @@
 
 （ガードリバーサル: 通常投げ/何もしない）
 
-- DR 6LK(h), 2MP, 強アッパー
-  - DR 6LK, ...
-  - DR 前投げ, 強ショット
+- DR 6LK/6MP(h), 2MP, 強アッパー
+  - DR 6LK/6MP, ...
+  - DR 前投げ
 - DR 6LK(g)
-  - 後退
-    - {通常投げ}, 2MP(pc)-HP, 強アッパー
-      - DR 6LK, ...
-      - DR 前投げ, 強ショット
-    - {何もしない}, ガード
-  - 前投げ, 強ショット
+  - 2LP(h), LP, 中アッパー
+    - DR 6LK/6MP, ...
+  - 2LP(g), LP, 弱ショット, ガード
+- DR 6MP(g)
 
 ### ラッシュ中段
 
@@ -111,7 +109,8 @@
     - {中央} 中ショット
     - {端} ステップ, MP/前投げ, ...
 - MP(g)
-  - MP, 2MP,
+  - MP, 2MP, 弱ショット
+  - MP, 2MP, 中ネクサス
 
 ## 上級
 
