--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -57,9 +57,28 @@
 
 ## 中級
 
-### ラッシュ下段
+### 端の前投げからの攻め
 
-（ガードリバーサル: 通常投げ/何もしない）
+- {端} 前投げ
+  - DR 前投げ, ...: 目押し
+  - DR 2MK(h), 4HP, 中ショット, 6HK, 中アッパー
+    - ステップ, MP, ...
+  - DR 2MK(g)
+    - MP(h)
+    - MP(g), 2LP,
+
+### リターンの高い対空
+
+（対空練習）
+
+- 4HP(c), 強アッパー-h
+  - 中ショット, 強ショット, ガード
+
+自分が技を出してない時に狙う、リターンの高い対空。
+
+### ラッシュ中段・下段
+
+（ガードリバーサル: 通常投げ/4F技/何もしない）
 
 - DR 6LK/6MP(h), 2MP, 強アッパー
   - DR 6LK/6MP, ...
@@ -69,8 +88,8 @@
     - DR 6LK/6MP, ...
   - 2LP(g), LP, 弱ショット, ガード
 - DR 6MP(g)
-
-### ラッシュ中段
+  - MP(相打ち), 2MP, 強アッパー, ...
+  - MP, 2MP, 弱ショット
 
 ### 6LKのヒット確認
 
@@ -81,15 +100,6 @@
   - DR 6LK(g), 2LP, 2MP, 弱ショット, ガード
 - 6LK(h), LP, 弱ショット, ガード
 - 6LK(g), ガード
-
-### リターンの高い対空
-
-（対空練習）
-
-- 4HP(c), 強アッパー-h
-  - 中ショット, 強ショット, ガード
-
-自分が技を出してない時に狙う、リターンの高い対空。
 
 ### BOさせた状態の削り
 
@@ -114,6 +124,11 @@
 
 ## 上級
 
+### Dリバの確反
+
+- MP(pc), HK(1), 強ノヴァ, 強アッパー, ステップ, MP, ...
+- {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h
+
 ### HPのヒット確認と中下段
 
 - HP(h)-HK, DR 6LK/6MP, ...
@@ -123,11 +138,6 @@
 
 - MK(h)-HK, DR 6LK/6MP, ...
 - MK(g), ガード
-
-### Dリバの確反
-
-- MP(pc), HK(1), 強ノヴァ, 強アッパー, ステップ, MP, ...
-- {端} MP(pc), HK(1), 強ノヴァ, 4HP, 強アッパー-h
 
 ### キャンセルラッシュ
 
@@ -148,11 +158,6 @@
 
 - 6HK(pc), 6HK, 2MP-HK, SA1
 - 6HK(pc), 6HK, 2MP-HK, SA2
-
-### ラッシュ下段
-
-- DR 2MK, MP(h), LP, 中アッパー, SA3
-- DR 2MK, MP(g), LP, 弱ショット, ガード
 
 ### メモ
 
