--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -775,3 +775,6 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 
 生活費（経費）を稼ぐことよりも、まずどのようなビジネス＝社会貢献をするか考える。
 ファイナンスは手段でしかない。
+
+仕事は、「それで収入が多少なりともあるか、ゼロかどうか」のラインと、「生活できるか、ビジネスを続けられるか」のラインがある。
+まずは少しでも収入を作って、事業継続の足しにするのが大事。でもいずれは黒字にしないといけない。
