--- a/shared/music/vocal/training/歌の基本.md
+++ b/shared/music/vocal/training/歌の基本.md
@@ -30,3 +30,6 @@ https://youtu.be/Q-nW_cP21Kg?si=oNWOOijeEqIjtweV
 まず声の出し方とか息の使い方が全ての基礎。基礎がある程度できてから、その範囲で応用する。
 
 言語である前に音楽であるべき。
+
+まずは良い声でリズムとメロディを安定させるのが基本。
+ただ、技術的には基礎練習ばかりだと飽きやすいので楽しめるように工夫しないといけない。
