--- a/shared/voice/training/tips/声を安定させる.md
+++ b/shared/voice/training/tips/声を安定させる.md
@@ -106,3 +106,5 @@ sの発音を長く出したまま、息と声の配分を100:0から0:100、0:1
 4. (3) で「あー」になってから音程を変えてみる
 
 息や声を抑えつけて安定させるのではなく、根本から安定させる。
+
+声が出てない間も息の圧はかけておいた方がレガートを維持しやすい。それに声のレスポンスが良くなってリズムが取りやすい。
