--- a/shared/achievement/problem/solving/問題解決.md
+++ b/shared/achievement/problem/solving/問題解決.md
@@ -55,3 +55,5 @@ https://qiita.com/jofuku/items/6420097fd5ff4c44c24d
 
 短期的な課題ばかりに目を向けて対策してしまうのはそもそも短期的で緊急の課題が多すぎるのが問題。これは普段からまず緊急の課題をちゃんと解決してないから。長期的な課題はまず短期的な課題が解決されないと始まらない。
 選挙なんかでも喫緊の課題が多いと考えていると、政党の公約も短期的なものが増える。
+
+問題解決では「次にどうするか？」が重要。過去の事象や原因を探るのも対策を考えるためでしかない。過去を悔やむのは無駄。
