--- a/shared/commerce/marketing/tips/質か量か.md
+++ b/shared/commerce/marketing/tips/質か量か.md
@@ -6,3 +6,5 @@
 質は結果。量を積み重ねた結果として質が得られる。
 
 何かの質が悪いのは量が少ないせい。母数を増やせばトップの質は良くなる。もちろん全体として見れば質が悪い部分も多くあるが、あとは消費者が選べばいいだけ。
+
+原則として量よりも質が重要。ただ、質を高めるためには量が必要。先に量があって、質がある。
