--- a/shared/society/身だしなみ.md
+++ b/shared/society/身だしなみ.md
@@ -7,3 +7,5 @@
 容姿や服装も周りに影響を与える。夏には涼しく、冬には暖かく感じられる服を見れば、周りに良い影響を与えている。
 
 ピカピカの革靴は身だしなみに気を遣ってる感じ。
+
+男性の支度に時間がかからないのが羨ましいなら、女性もすっぴんで出歩けばいい。男性はみんなそうしてる。
