--- a/shared/entertainment/examples/ギャンブル.md
+++ b/shared/entertainment/examples/ギャンブル.md
@@ -23,3 +23,7 @@
 ギャンブルはなくなってもいい金でやる。当たればラッキー。
 
 ギャンブルは「的中する」ことと同じくらい「買い目を減らす」ことが重要。無駄な保険をどこまで削れるか。
+
+ギャンブルはリスクを負うからこそ楽しい。
+そこに楽しみを見出せないならギャンブルはしないほうがいいし、楽しめるならハマるのでギャンブルはしないほうがいい。
+ギャンブルをしていいのはギャンブル自体に価値を見出さない人。馬が好きだから競馬でついでに賭けるとか。
