--- a/shared/society/社会.md
+++ b/shared/society/社会.md
@@ -95,3 +95,5 @@ businessやcommunityも社会の一部。
 社会にとって別にいらない人を生かす必要があるかどうか、あるいはその余裕があるかどうか、という問題。
 
 「どう考えても社会に対して肯定的な人たちじゃない。」『雑用付与術師が自分の最強に気付くまで』
+
+社会というのは常に狂っているもので、いちいち「社会が狂っている」というのはおかしい。万人に合っている社会はない。
