--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -333,3 +333,6 @@ Practiceは反復練習や実践のこと。
 https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 
 本当にできるかわからないことは、自分を信じて練習するしかない。
+
+練習の質とは、対象の習慣や負荷により慣れること。
+ただ、練習の質が高くても、その行動自体がぬるいとぬるい行動に慣れるだけ。まず学習が必要。
