--- a/shared/art/創作.md
+++ b/shared/art/創作.md
@@ -8,3 +8,5 @@
 新たに作る場合、自分で作るか、誰かに依頼するか。
 
 創作は開発と近いけど、「できる」という部分がなくてもいい。なんの役に立たなくてもいい。
+
+「思うようにいかない物語を途中で何度直しても、良いものになるとは限らない。そういう時にどうしたらいいかわかるかね？とにかく、恐れずに書いてみることだ。その先をね。」『異世界失格』
