--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -109,3 +109,5 @@
 
 親族から反対される結婚は避けるべき。
 ただ、理由についてはよく聞くといい。慣習や常識が理由ならそれは過去のことなので別に無視してもいいけど、相手の性格や経歴は現在に関わることなので自分が盲目になっているだけかも。
+
+結婚するなら少なくとも生活リズムや金銭感覚が合う人がいい。
