--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -70,3 +70,5 @@ https://note.com/atano/n/n3c01c44d8bae
 キーは歌いやすいところに合わせるだけでなく、あえて2つ高めにしてテンションを高めにしたりすると印象が変わる。
 
 新しく覚えた曲はまず原キーから。リズムとメロディを覚えてからキーを変える。
+
+一定のテンションで高いピッチが出るのは良いことだけど、別にキーを下げてその分テンションを抑えられるようにしてもいい。
