--- a/shared/thinking/前提を疑う.md
+++ b/shared/thinking/前提を疑う.md
@@ -5,3 +5,5 @@
 疑うのは試す、検証するのとセットにしてようやく意味がある。
 
 何かを疑うのは、それを否定することではなく、態度を保留すること。それの扱いをまだ決めないこと。まぁ、信じてないと言われればそう。
+
+疑問や問題を解決するには疑うだけではダメ。疑うというのは単に態度を保留することであって、待ちの姿勢でしかない。検証しなければならない。
