--- a/shared/voice/training/tips/強い声を出す.md
+++ b/shared/voice/training/tips/強い声を出す.md
@@ -25,3 +25,5 @@ http://hira0888.life.coocan.jp/asu124.html
 声が強いこと自体は別にいい。声を強くするために硬くなっていたら良くない。柔らかく強い声にする。
 
 スキマスイッチは声帯の張力低めで、息だけ強くして張るとそれっぽい。あと肺活量があるのでブレス足りなかったらどっかで切るしかない。
+
+Da-iCEのCITRUSは意外と強い息で歌っている。
