--- a/shared/devotion/没頭.md
+++ b/shared/devotion/没頭.md
@@ -43,3 +43,5 @@ entertainment や engagement は没頭の筆頭。喜びと楽しみ。
 午前中と19-21時は人間が特に元気な時間。集中しやすい。
 
 勝っても有頂天にならず、負けても落胆しない。
+
+「真剣な者の面差しとは輝いているものだ。」『凶乱令嬢ニア・リストン』
