--- a/shared/game/theory/攻めと守りの切り替え.md
+++ b/shared/game/theory/攻めと守りの切り替え.md
@@ -5,3 +5,6 @@
 
 相手の攻めを切ったのにちんたらしているとまた攻められる。
 守りが終わったらすぐ切り替えて追撃したり牽制したりして、次の攻めまで抑え込まないといけない。逆に攻め潰せるなら攻めた方がいい。
+
+攻めと守りはまず守りが優先。というか死なないのが優先。相手を殺す前に死なないなら守らなくてもいい。なんなら守ることで速度が劣って負けることもある。
+基本は相手の攻めを切ってから攻める。ただ、こちらの攻めが先に通るなら無視して攻める。速度計算。
