--- a/shared/trust/警戒するべき相手.md
+++ b/shared/trust/警戒するべき相手.md
@@ -1,3 +1,7 @@
-- 急激な変化を狙う人、大儲けを唆す人
+- 急激な変化を狙う人
+  - 大儲けを唆す人
+- 情報を隠す人
 
 急激な変化を狙う人は信用できない。あくまでも変化は小さく積み重ねるべき。その結果として大きな変革が起こる。
+
+知識を隠す人というのは、常に自分の利益のために動いている。
