--- a/shared/voice/声のタメ.md
+++ b/shared/voice/声のタメ.md
@@ -8,3 +8,7 @@
 唇で息を受け止める癖がつくのはよくない。声帯を閉じて、声帯で受け止めるといい。
 
 音楽的にはタメを作るとリズムも遅れるので、表現としてあえて溜める以外では溜めたくない。
+
+声の出だしの声帯を閉じるタイミングと呼吸を始めるタイミングは一致するのがベストだけど、呼吸が先にあって声帯を閉じるよりは、声帯を閉じて呼気を当ててから声帯を開く方がいい。
+
+強い息を声帯で止めておいて、絞り出すように声を出し始めるのも表現の一つ。
