--- a/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの対策.md
@@ -1,1 +1,9 @@
 差し合いはとにかくニーを見てから立つのが大事。しゃがむと+2取られる。
+
+サガット有利になる状況が結構あるので、割り込みポイントは覚えないといけない。
+割り込みポイントというよりは、立ったら確反、ということが多い。
+
+## ニー
+
+連携の締めにニーを混ぜてくる場合は立ちガードから確反を狙う。OD以外がめり込んだら5F以上はある。
+当たり方で下りで当たったか上りで当たったか判別できるようにするのも大事。
