--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -240,6 +240,11 @@ J.HP, 4HP, 中ショットなどで繋いでも密着できる。
 
 2MP/2HP/4HP/HKからは中ネクサスまで無敵技以外で割り込めない。
 
+## ネクサスの読み合い
+
+上位帯だと基本的にマイトを警戒してくる場合が多い。パリィとか、基本立ってくる。グリードが中心。
+ただ、グリードはリスクも大きいので、あえてノヴァを混ぜるのもいい。
+
 ## 弱/中ネクサス(g): -5
 
 - マイト: 暴れ潰し
