--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -7,7 +7,13 @@
 
 ## MP: 3-8
 
-- MP(g)
+- MP(c), 4HP/2MP, ...
+- MP(h)
+  - LP, 中アッパー: 中央でも起き攻めしやすい
+  - MP, LP, 中アッパー(+2): 端以外では離れすぎて起き攻めしづらい
+- MP(g): 投げ間合いの外
+  - LP, 弱ネクサス: 発生7F以上の技にカウンターしてノヴァが入る
+  - LP, 強ネクサス: 立ち小足や中パンなどに差し返し気味に当たってノヴァが入る
   - 2LP: 無敵技以外で割り込めない
     - 2MP: 短い技を潰す、ジャンプで避けられる
       - {中央} 弱ショット: -7で大足の外、端では離れないので確反がある
@@ -16,9 +22,12 @@
       - 弱ニー(+6): 立ちガードされて-2の投げ間合い
       - {端} 2MP, ODニー: 弱攻撃を潰して、中攻撃以上は相打ち以上
       - ガード: 差し返し狙い
-  - MP, 2MP: 短い技を潰す、カウンターで繋がる
+  - MP(g)
+    - {ガード} 2MP: 短い技を潰す、カウンターで繋がる
+    - {ガード} 後退(3-8F), 2MP, CR MP: 差し返し気味に当ててラッシュ
+    - {ガード} 後退(), 2HP, 強ネクサス: パニカンになると繋がる
     - {相打ち} MK: 暴れ潰し
-- MP(h), MP/LP
+  - MP(相打ち), 2MP, ...
 - MP(c), 4HP
 
 ガードされても+2で状況がいい。
@@ -29,7 +38,9 @@
 
 持続当てになる。ヒットでもガードでも同じ硬直。
 
-(+1)なら2LPまでだが、(+3)からはMP, LPが入るし、
+(+1)なら2LPまでだが、(+3)からはMP, LPが入るし、(+5)からは4HPが入る。
+
+ヒットストップが短くて確認が難しい。
 
 ## {端} OD上ショット: 18
 
