--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -3,6 +3,32 @@
 （ダミー設定 > ガード: ランダム）
 （ダミー設定 > 起き上がり: 後方受け身）
 
+## 概要
+
+1. 対空: {空} 4HP
+2. 確反: 6HK(pc)
+3. 確反: DI(pc)
+4. DR 6LK/6MP
+5. 6LK(c)
+6. 2MP, CR MP
+7. {端} MP, MP, LP, 中アッパー
+8. {BO} 2LP, 2MP, 強ニー
+9. 対空: {空} アッパー
+10. 飛び道具
+11. DI(壁)
+12. {端} 前投げ
+13. J.HP, HK, ...
+14. 強アッパー, DR 投げ
+15. {中央} 前投げ
+16. {端} 後投げ
+17. 2MP/2HP, 中/強ネクサス
+18. MK-HK
+19. HP-HK
+20. MP, LP, 中アッパー
+21. 2MP(pc)-HP
+22. {DV}, MP(pc)
+23. 2LP 2回, 中アッパー, SA3
+
 ## 初級
 
 ### 飛び道具と対空
@@ -24,10 +50,10 @@
 
 ガードリバーサルにDIを加えてもいい。
 
-### ジャンプ・ラッシュ攻撃のコンボ
+### ジャンプ攻撃のコンボ
 
-- J.HP/DR MP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
-- J.HP/DR MP(g)
+- J.HP(h), HK(1), 強ノヴァ, DR 4HP, 強アッパー-h, SA3
+- J.HP(g)
   - HK, 中ネクサス
     - マイト(h), 前投げ
     - マイト(g), ガード
@@ -71,8 +97,8 @@
 
 （対空練習）
 
-- 4HP(c), 強アッパー-h
-  - 中ショット, 強ショット, ガード
+- {空} 4HP, 強アッパー-h
+  - 強ショット
 
 自分が技を出してない時に狙う、リターンの高い対空。
 
