--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -33,3 +33,9 @@ BO中は特にOD上ショットを削りで使っていくのが大事。
 ノーキャンセルで2LP(g), 2LP, 2LK, 弱ニーみたいに繋いでもいい。
 
 単発の中ニーも強い。
+
+## シミー
+
+- バクステ, 2MP: 30Fぴったり
+
+歩きが遅いのでシミーしづらい。ただ、後退がシミーになる状況を作るパターンもわりとある。ド密着から下がるというよりは、少し離れた位置からシミーと投げを狙う。
