--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -10,7 +10,7 @@
 3. 確反: DI(pc)
 4. DR 6LK/6MP
 5. 6LK(c)
-6. 2MP, CR MP
+6. 2MP, CR MP, 4HP
 7. {端} MP, MP, LP, 中アッパー
 8. {BO} 2LP, 2MP, 強ニー
 9. 対空: {空} アッパー
@@ -27,7 +27,9 @@
 20. MP, LP, 中アッパー
 21. 2MP(pc)-HP
 22. {DV}, MP(pc)
-23. 2LP 2回, 中アッパー, SA3
+23. 2LP/2LK, LP, 中アッパー
+24. MP, LP, CR 2LP, 4HP
+25. MP, LP, CR 2LP, 2MP, CR MP, 4HP
 
 ## 初級
 
