--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -255,6 +255,8 @@ HK(1), 強ノヴァは相手が空中でも使える。
 - 6LK(+4), 2MP, 強アッパー, SA3: 4080
 - 6LK(+4), 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 4341
 
+中央ノーゲージで攻めるなら立ち確認して中グリードにしてもいい。
+
 ## {立} 6HK
 
 - 6HK, 2MP, 強アッパー: 2720
