--- a/shared/engagement/誇り.md
+++ b/shared/engagement/誇り.md
@@ -96,3 +96,5 @@
 期待を裏切らないことに誇りを持つ。
 
 誇りを得るためにはまず勝たなければならない。まずは自分たちのやってきたことが正解だったと思える一勝が誇りにつながる。
+
+誇りを守るためには飾りも必要。たとえば会社のビルのロゴがボロボロだったり、給料が安かったりすると格好がつかない。ただ飾るというよりは、誇りを示す。
