--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -52,3 +52,6 @@
 息を強めて高い音を出すところでも喉を締めるのではなく、腹で息を強くする。最悪胸式呼吸でもいい。
 
 地声で高い声を出そうとすると軟口蓋が下がって重く暗い声になりがち。喉を下げても軟口蓋は上げたほうがいい。
+
+高い声が出ない時はまず発音を無視して全部声の出しやすい音でメロディを追ってみる。「あー」でもいいし、「ooh」でもいい。
+例えば日本語の「い」とかは発音しにくいので、まずは発音しやすい音で出して、発音できる音を「い」に近づける。
