--- a/shared/voice/声.md
+++ b/shared/voice/声.md
@@ -118,3 +118,7 @@ speaking と singing は別に分けなくていいかも。
 声的には女性として生まれた時点で大当たりではある。音域が広くなりやすいし。
 
 声が衰えてるのに体を鍛える方法がわからないとそのまま下手になってしまう。才能だけで歌ってはいけない。
+
+声の軽さはキレと考えられる。一音一音のキレが悪いとのっぺりして抑揚のない感じになる。
+
+速い曲ほど軽い声で歌わないとキレが悪い。
