--- a/study/politics/正義.md
+++ b/study/politics/正義.md
@@ -19,3 +19,7 @@
 正義は暴力を許さないというよりも暴力が権力になるのを許さない。
 
 正義に力が必要なのは、暴力を止めるために暴力が必要だからだ。力がなければ暴力を容認するしかない。
+
+権力を背景に行動したら正義ではない。
+
+許せないと思ってしまうと、見過ごすことができない。それが正義。正義の心を持たない者は目の前の暴力を許容する。
