--- a/shared/music/vocal/training/歌の技術.md
+++ b/shared/music/vocal/training/歌の技術.md
@@ -118,3 +118,5 @@ https://youtu.be/6Tp-eguoPJI?si=SNx252totGgfY4LU
 その上で必要に応じてスタッカートにする。
 
 曲の精度を上げるにはまずリズムから。80くらいのテンポに落としてメトロノームでテンポをとりながら正確に練習する。あとは滑舌でテンポに追いつけなくなることもあるので、元のテンポで口が回らないところは重点的に練習する。リズムを正確にとりつつ、表現として走りや溜めの位置も検討する。
+
+歌い方の変化で曲に合わなくなることがある。まずは基礎を固めるので当面は仕方ない。慣れてきたら声色もコントロールできるようにする。
