--- a/shared/voice/training/tips/口を開ける.md
+++ b/shared/voice/training/tips/口を開ける.md
@@ -1,3 +1,12 @@
+顎の動かし方には二つある。
+
+- 顎を前に動かす
+- 顎を下に動かす
+
+顎は前に動かして、顎の付け根の骨がズレる感覚で開かないと、首を圧迫して声が押さえつけられる。
+
+顎とは別に、口角を上げることで口の空間をより広げられる。
+
 歌うときは口角を上げた方が口を広く開けられる。
 
 舌は邪魔にしかならないので、力を抜いて、下の歯の裏に平たく除ける。
@@ -37,3 +46,5 @@
 奥歯で割り箸を縦にくわえて歌うのは、顎を一定に開けたまま唇と舌で発音を変える練習。
 
 顎を動かさずに唇と舌を大きく動かすストレッチ。まだ発音は気にしなくていい。
+
+口を大きく開けると、喉を狭めて無理に高い声を出すことができなくなる。練習としては大きく開けたほうがいい。本番では口に響かせやすいように口を開けすぎない。
