--- a/shared/voice/training/tips/声帯を張る.md
+++ b/shared/voice/training/tips/声帯を張る.md
@@ -1,6 +1,6 @@
 ## Why
 
-声帯を張ることで大きく重く厳しい感じの声になる。
+声帯を張ることで大きく高い声になる。
 
 ## How
 
@@ -10,6 +10,7 @@
 - 声帯に力を入れて硬くする
 
 声帯に力を入れると声が硬くなる。
+基本的には声帯を伸ばして柔らかくて高い声を目指したい。
 
 ## その他
 
@@ -61,7 +62,7 @@ https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
 ポップスは息よりも声帯のテンションを変えて強弱をつけることが多い。
 バラードなんかは声帯ゆるゆるでゆったり歌った方がそれっぽい。
 
-髭ダンも声帯ゆるゆる。
+髭ダンも声帯ゆるゆるだと思う。
 
 普段はできるだけ声帯のテンションが弱い状態で曲練習すると高い音が出にくいので、テンションを強くした際により高い音が出るようになる。ただ、テンションが強い状態の筋トレも必要。
 
@@ -75,3 +76,7 @@ https://youtube.com/shorts/Zvpf7Lcfb2E?si=nc8lr40hK2s7h9x4
 声帯に力を入れて動きを悪くするよりは、しっかり伸ばすことで緩みをなくした方がいい。
 
 メロディーみたいに声帯ゆるゆるで声を出すには息の圧が通常以上に必要。
+
+喉を下げて声帯を張ることで大きく重く厳しい声になる。
+
+伸ばすけど張りは弱いってこともある。
