--- a/shared/voice/training/tips/重い声を出す.md
+++ b/shared/voice/training/tips/重い声を出す.md
@@ -1,6 +1,6 @@
-声種
-
 音色で決まる。つまり音の混ざり具合。
+
+倍音が少ないほど硬くて軽い声になる。
 
 ライトボイスとヘビーボイスという声質がある。
 
@@ -14,8 +14,8 @@
 
 声帯の厚さで変わる。
 
-口の中でごにょごにょ発生すると細くなりやすい。
+口の中でごにょごにょ発声すると細くなりやすい。
 
-弱々しい声しか出ないのは声帯がしっかり閉じてない。
+弱々しい声しか出ないのは声帯や軟口蓋がしっかり閉じてない。
 
 低くて軽い声もありうる。
