--- a/shared/voice/声の違い.md
+++ b/shared/voice/声の違い.md
@@ -1,15 +1,14 @@
 ## 概要
 
-- 声量
-- 声質
+- 声量（声の大きさ）
+- 声質（声の響き）
   - 喉声、喉の締まり
   - 鼻声
-  - 声の響き
   - 声の重さ
   - 声の明るさ
   - 声帯の鳴りの強さ
-- 声域
-- 滑舌
+- 声域（声の高さ）
+- 発声、滑舌
 
 ## 声以外の違い
 
