--- a/shared/voice/声のポジション.md
+++ b/shared/voice/声のポジション.md
@@ -1,1 +1,4 @@
-声のポジションは、声の鳴る位置のことで、常に一番下、声帯で鳴らさないといけない。喉や鼻で鳴らさない。
+声のポジションは、声の鳴る位置のこと。
+基本的には常に一番下、声帯で鳴らさないといけない。喉や鼻で鳴らさない。
+
+声色を変える時は声のポジションを変えたり、声帯を開いたり、逆に強く閉めたり、仮声帯を鳴らしたりする。
