--- a/shared/voice/training/ボイストレーニングの順序.md
+++ b/shared/voice/training/ボイストレーニングの順序.md
@@ -6,9 +6,9 @@
 4. 音程や声量の幅が広い
 5. 声色を自由に変えられる
 
-sのロングトーンがぷつぷつ切れるようなら、そもそも息が安定してない。
+sのロングトーンがぷつぷつ切れるようなら、良い呼吸を維持できていない。
 
-ahやuhのロングトーンがぷつぷつ切れるようなら、そもそも声が安定してない。
+息が安定しているのにahやuhのロングトーンがぷつぷつ切れるようなら、声帯を維持できていない。
 
 ## 初級
 
