--- a/shared/music/theory/音楽性.md
+++ b/shared/music/theory/音楽性.md
@@ -4,3 +4,28 @@ https://youtu.be/MdguaYfiX_8?si=7jde-QKo0p-XF9oa
 「一つの楽曲で大事な箇所は一つしかない。」
 
 音楽性はまずリズムが最優先。まずはテンポと強弱、休符。
+
+音楽性はリズム、メロディ、ハーモニーの中で表現される。
+
+まず、曲でメロディーはほぼ決まっている。
+キーを変えたり、しゃくりやフォールのような始末の表現で多少工夫はできるくらい。
+特にメロディーで音楽性を表現したいなら作曲が最終形態。
+
+ハーモニーはかなり自由で、声や楽器を重ねることもあるし、声色や楽器を変えるだけでも音が変わる。
+
+- リズム
+  - 間
+  - 抑揚
+    - アクセントの強さ
+    - クレッシェンドやデクレッシェンド
+- メロディ
+  - 曲の旋律
+  - キー
+  - こぶしやビブラートなどの音の途中の変化
+  - しゃくりやフォールなどの音の末端の変化
+  - フェイク
+- ハーモニー
+  - 重奏
+    - 違う旋律（ハモリ）
+    - 同じ旋律（ユニゾン）
+  - 声色や楽器の音色
